# PESCA

./: README.md  pesca.cabal
doc/: manual.tex
src/: Editor.hs  PrelSequent.hs
